Changed JDK 8 to JDK 19 and updated spring boot to version 2.7.6